# plurimus

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic.rs  tachyonfx.rs  ui.rs
src/: draw.rs  effects.rs  lib.rs  plugin.rs
src/ui/: actions.rs  builder.rs  focus.rs  mod.rs  pointer.rs  state.rs  util.rs
src/widget/: area.rs  mod.rs  order.rs  size.rs  widget.rs
